Filemanager, ability to play videos, more settings.
Added a very simple filemanager, listing every file in a folder on the rpi.
The folder can be changed from settings.
Some bugfixes.

--- a/Android/omxRemote-android/res/values/strings.xml
+++ b/Android/omxRemote-android/res/values/strings.xml
@@ -9,6 +9,6 @@
     <color name="Green">#53e512</color>
     <color name="Red">#e00c0c</color>
 
-
+    <string name="title_activity_filemanager">Filemanager</string>
 
 </resources>
